update commit